--- a/settings.conf
+++ b/settings.conf
@@ -5,8 +5,7 @@
 		"nick": "DovaBot",
 		"pass": "password",
 		"channel": [
-			"##isso-tutorials",
-			"#botwar"
+			"##temp"
 		],
 		"ident": "dovahkiin",
 		"realname": "PythonIRCClient"
