updated settings to include ssl

--- a/settings.conf
+++ b/settings.conf
@@ -2,6 +2,7 @@
 	"settings": {
 		"host": "irc.freenode.net",
 		"port": 6697,
+		"ssl":	"yes",
 		"nick": "DovaBot",
 		"pass": "password",
 		"channel": [
