Minor security update

--- a/settings.conf.example
+++ b/settings.conf.example
@@ -9,7 +9,8 @@
 			"##temp"
 		],
 		"ident": "dovahkiin",
-		"realname": "PythonIRCClient"
+		"realname": "PythonIRCClient",
+		"apiKey": "APIKEYHEREDONTSHARE"
 	}
 }
 
